# decimalToBinary

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: operations.cpp
tests/: CMakeLists.txt  mainTests.cpp  operationsTests.cpp
